--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <h1>Food</h1>
-<a routerLink="add" class="btn btn-sm btn-success mb-2">Add User</a>
+<button mat-button (click)="openDialog('Add',{})" mat-flat-button color="primary">Add Food</button>
 
 <div class="example-container mat-elevation-z8">
 
@@ -23,10 +23,10 @@
           <mat-cell *matCellDef="let row" data-label="description"> {{row.description}} </mat-cell>
         </ng-container>
 
-          <!-- Location Column -->
-          <ng-container matColumnDef="location">
+          <!-- placeName Column -->
+          <ng-container matColumnDef="placeName">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Location </mat-header-cell>
-            <mat-cell *matCellDef="let row" data-label="location"> {{row.location}} </mat-cell>
+            <mat-cell *matCellDef="let row" data-label="placeName"> {{row.placeName}} </mat-cell>
         </ng-container>
 
           <!-- ValidDate Column -->
@@ -45,7 +45,6 @@
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: displayedColumns;">
         </mat-row>
-      </mat-table>
 
   </mat-table>
 
