--- a/src/app/account/login.component.html
+++ b/src/app/account/login.component.html
@@ -17,11 +17,11 @@
                 </div>
             </div>
             <div class="form-group">
-                <button [disabled]="loading" class="btn btn-primary">
+                <button [disabled]="loading" class="btn btn-primary"  data-cy="login-button">
                     <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                     Login
                 </button>
-                <a routerLink="../register" class="btn btn-link">Register</a>
+                <a routerLink="../register" class="btn btn-link" data-cy="register-link">Register</a>
             </div>
         </form>
     </div>
