--- a/src/app/account/register.component.html
+++ b/src/app/account/register.component.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <button [disabled]="loading" class="btn btn-primary">
+                <button [disabled]="loading" class="btn btn-primary" data-cy="register-button">
                     <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                     Register
                 </button>
