--- a/src/app/places/places.component.html
+++ b/src/app/places/places.component.html
@@ -1,33 +1,52 @@
 <div class="panel">
-  <h1>Places</h1>
-  <button mat-button (click)="openAddDialog()" mat-flat-button color="primary">Add Place</button>
 
+  <!-- title & toolbar -->
+  <h1>Places</h1>
+  <button mat-flat-button color="primary" (click)="openAddDialog()">
+    <mat-icon class="mr-1">add</mat-icon>
+    Add Place
+  </button>
+
+  <!-- data table -->
   <div class="example-container mat-elevation-z8">
 
-    <mat-table [dataSource]="dataSource" matSort>
+    <table mat-table [dataSource]="dataSource" matSort class="full-width">
 
-          <!-- Name Column -->
-          <ng-container matColumnDef="name">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
-            <mat-cell *matCellDef="let row" data-label="name">
-              <span class="mobile-label">{{row.name}}</span>
-            </mat-cell>
-          </ng-container>
+      <!-- Name column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+        <td mat-cell        *matCellDef="let row">{{ row.name }}</td>
+      </ng-container>
 
-          <!-- Action Column -->
-          <ng-container matColumnDef="action">
-            <mat-header-cell *matHeaderCellDef> Action </mat-header-cell>
-            <mat-cell *matCellDef="let row" class="action-link">
+      <!-- Action column -->
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef>Action</th>
+        <td mat-cell *matCellDef="let row" class="action-buttons">
+          <button mat-icon-button color="primary" (click)="openEditDialog(row)">
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button mat-icon-button color="warn" (click)="deletePlace(row.id)">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
 
-            </mat-cell>
-          </ng-container>
+      </ng-container>
 
-          <mat-header-row *matHeaderRowDef="displayedColumns" sticky></mat-header-row>
-          <mat-row *matRowDef="let row; columns: displayedColumns;">
-          </mat-row>
+      <!-- header / data rows -->
+      <tr mat-header-row *matHeaderRowDef="displayedColumns" sticky></tr>
+      <tr mat-row        *matRowDef="let row; columns: displayedColumns"></tr>
 
-    </mat-table>
+      <!-- empty-data placeholder -->
+      <tr *matNoDataRow class="mat-row">
+        <td class="mat-cell" colspan="2">No places yet</td>
+      </tr>
 
-    <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
+    </table>
+
+    <!-- paginator -->
+    <mat-paginator
+      [pageSizeOptions]="[10, 25, 100]"
+      showFirstLastButtons>
+    </mat-paginator>
   </div>
 </div>
