--- a/src/app/places/places.component.html
+++ b/src/app/places/places.component.html
@@ -1,11 +1,13 @@
 <div class="panel">
 
   <!-- title & toolbar -->
-  <h1>Places</h1>
-  <button mat-flat-button color="primary" (click)="openAddDialog()">
-    <mat-icon class="mr-1">add</mat-icon>
-    Add Place
-  </button>
+  <div class="panel-header">
+    <h1>Places</h1>
+    <button mat-flat-button color="primary" (click)="openAddDialog()">
+      <mat-icon class="mr-1">add</mat-icon>
+      Add Place
+    </button>
+  </div>
 
   <!-- data table -->
   <div class="example-container mat-elevation-z8">
@@ -33,7 +35,7 @@
       </ng-container>
 
       <!-- header / data rows -->
-      <tr mat-header-row *matHeaderRowDef="displayedColumns" sticky></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row        *matRowDef="let row; columns: displayedColumns"></tr>
 
       <!-- empty-data placeholder -->
