--- a/src/styles.less
+++ b/src/styles.less
@@ -12,3 +12,12 @@ a { cursor: pointer; }
     text-align: center;
     box-sizing: content-box;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.cdk-overlay-container
+.mat-mdc-dialog-container
+.mat-mdc-dialog-title + .mat-mdc-dialog-content {
+  padding-top: 16px !important;
+}
